--- a/cat.html
+++ b/cat.html
@@ -46,7 +46,7 @@
         </tbody>
     </table>
     <button onclick="addRow()">הוסיפי שורה</button>
-    <button onclick="saveData()">שני נתונים</button>
+    <button onclick="saveData()">שמרי נתונים</button>
 
     <script>
         function addRow() {
